--- a/src/main/resources/templates/customer-signup.html
+++ b/src/main/resources/templates/customer-signup.html
@@ -79,7 +79,7 @@
                                    th:errors="*{lastName}"></p>
                             </div>
                             <div class="form-group">
-                                <input class="input" id="dob" type="date" name="dob" placeholder="Date of Birth"
+                                <input class="input" id="dob" type="date" name="dob"
                                        th:field="*{dob}" data-toggle="tooltip" title="Date of Birth">
                                 <p class="text-danger" th:if="${#fields.hasErrors('dob')}" th:errors="*{dob}"></p>
                             </div>
@@ -94,7 +94,8 @@
                                 <input type="checkbox" value="Y" id="terms" name="termsAndConditions">
                                 <label for="terms">
                                     <span></span>
-                                    I've read and accept the <a href="#" data-toggle="modal" data-target="#termsAndConditions">terms & conditions</a>
+                                    I've read and accept the <a href="#" data-toggle="modal"
+                                                                data-target="#termsAndConditions">terms & conditions</a>
 
                                 </label>
                                 <p class="text-danger" th:if="${#fields.hasErrors('termsAndConditions')}"
@@ -110,7 +111,8 @@
             <!-- /container -->
         </div>
     </div>
-    <div class="modal fade" id="termsAndConditions" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="termsAndConditionsLabel" aria-hidden="true">
+    <div class="modal fade" id="termsAndConditions" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+         aria-labelledby="termsAndConditionsLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
