--- a/src/main/resources/templates/customer-signup-mobile-verification.html
+++ b/src/main/resources/templates/customer-signup-mobile-verification.html
@@ -33,7 +33,7 @@
             <!-- row -->
             <div class="row">
                 <div class="col-md-10">
-                    <p th:if="${accountVerificationStatus == null}">
+                    <p th:if="${signupStatus == null}">
                         Dear <b th:text="${mobileOTPVerificationForm.customerName}">Customer</b>, you have signed up with us, we sent verification
                         link to your email address: <span th:text="${mobileOTPVerificationForm.verificationEmailAddress}">emailAddress</span> and an OTP
                         number
@@ -41,6 +41,9 @@
                         email address by clicking on the link sent, along with that please proceed on verifying your
                         mobile
                         number by providing the otp code below.
+                    </p>
+                    <p th:text="${signupStatus}" th:if="${signupStatus != null}">
+
                     </p>
                 </div>
             </div>
@@ -61,6 +64,7 @@
                                 <p class="text-danger" th:if="${#fields.hasErrors('otpCode')}" th:errors="*{otpCode}"></p>
                             </div>
                             <input type="hidden" name="userAccountId" th:field="*{userAccountId}">
+                            <input type="hidden" name="customerName" th:field="*{customerName}">
                             <input type="hidden" name="verificationEmailAddress" th:field="*{verificationEmailAddress}">
                             <input type="hidden" name="verificationMobileNo" th:field="*{verificationMobileNo}">
                             <button class="primary-btn order-submit" type="submit">Verify</button>
