--- a/src/main/resources/templates/global-error.html
+++ b/src/main/resources/templates/global-error.html
@@ -13,12 +13,7 @@
             <!-- row -->
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="breadcrumb-header">Customer Registration Status</h3>
-                    <ul class="breadcrumb-tree">
-                        <li><a href="#">Home</a></li>
-                        <li class="active">Signup</li>
-                    </ul>
-
+                    <h3 class="breadcrumb-header">Error</h3>
                 </div>
             </div>
             <!-- /row -->
@@ -33,7 +28,7 @@
             <!-- row -->
             <div class="row">
                 <div class="col-md-10">
-                    <p th:text="${signupStatus}">Signup Status</p>
+                    <p style="text-danger" th:text="errorMessage">Error Message</p>
                 </div>
             </div>
         </div>
