--- a/src/main/resources/templates/layout/full-page-layout.html
+++ b/src/main/resources/templates/layout/full-page-layout.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Electro - HTML Ecommerce Template</title>
+    <title>XTrade</title>
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -34,7 +35,12 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+    <!-- jQuery Plugins -->
+    <script th:src="@{~/static/js/jquery.min.js}"></script>
+    <script th:src="@{~/static/js/bootstrap.min.js}"></script>
+    <script th:src="@{~/static/js/slick.min.js}"></script>
+    <script th:src="@{~/static/js/nouislider.min.js}"></script>
+    <script th:src="@{~/static/js/jquery.zoom.min.js}"></script>
 </head>
 <body>
 <!-- HEADER -->
@@ -43,14 +49,16 @@
         <!-- TOP HEADER -->
         <div id="top-header">
             <div class="container">
-                <ul class="header-links pull-left">
-                    <li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
-                    <li><a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
-                    <li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
+                <div sec:authorize="isAuthenticated()">
+                    This content is only shown to authenticated users.
+                </div>
+                <ul class="header-links pull-right" sec:authorize="isAnonymous()">
+                    <li><a th:href="@{~/customer/login}"><i class="fa fa-sign-in"></i> Login</a></li>
+                    <li><a th:href="@{~/customer/signup}"><i class="fa fa-user-plus"></i> Signup</a></li>
                 </ul>
-                <ul class="header-links pull-right">
-                    <li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-                    <li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
+                <ul class="header-links pull-right" sec:authorize="isAuthenticated()">
+                    <li><a href="#"><i class="fa fa-user-o"></i> <span sec:authentication="name"></span></a></li>
+                    <li><form name="logout" th:action="@{/logout}" method="post"><a href="javascript:void(0);" onclick="javascript:document.forms['logout'].submit();"><i class="fa fa-sign-out"></i> Logout</a></form></li>
                 </ul>
             </div>
         </div>
@@ -364,13 +372,7 @@
         <!-- /bottom footer -->
     </footer>
     <!-- /FOOTER -->
+    <script th:src="@{~/static/js/main.js}"></script>
 </th:block>
-<!-- jQuery Plugins -->
-<script th:src="@{~/static/js/jquery.min.js}"></script>
-<script th:src="@{~/static/js/bootstrap.min.js}"></script>
-<script th:src="@{~/static/js/slick.min.js}"></script>
-<script th:src="@{~/static/js/nouislider.min.js}"></script>
-<script th:src="@{~/static/js/jquery.zoom.min.js}"></script>
-<script th:src="@{~/static/js/main.js}"></script>
 </body>
 </html>
