code-s3 SIGNUP & Login complete

--- a/src/main/resources/templates/customer-signup-mobile-verification.html
+++ b/src/main/resources/templates/customer-signup-mobile-verification.html
@@ -43,7 +43,7 @@
                         number by providing the otp code below.
                     </p>
                     <p th:text="${signupStatus}" th:if="${signupStatus != null}">
-
+                        Message
                     </p>
                 </div>
             </div>
