--- a/src/main/resources/templates/customer-login.html
+++ b/src/main/resources/templates/customer-login.html
@@ -35,6 +35,7 @@
                     <div class="col-md-5 col-md-offset-3">
                         <p class="text-danger" th:if="${param.error != null && param.error[0] == 'bad'}">Email Address or Password entered is in-correct</p>
                         <p class="text-danger" th:if="${param.error != null && param.error[0] == 'disabled'}">Your account has been disabled, please reach out to the support for help!</p>
+                        <p class="text-danger" th:if="${param.error != null && param.error[0] == 'locked'}">Your account is pending for activation, please click <a th:href="@{~/customer/lockedFindAndActivate}">here</a> to activate your account.</p>
                     </div>
                 </div>
                 <div class="row justify-content-md-center">
