--- a/src/main/resources/templates/locked-find-and-activate-account.html
+++ b/src/main/resources/templates/locked-find-and-activate-account.html
@@ -34,15 +34,13 @@
             <div class="row">
                 <div class="col-md-10">
                     <p>
-                        Looks like your account is pending for verification, please provide your email address to find
-                        and activate your account
+                        Provide the email address to proceed for find and activate the account.
                     </p>
                 </div>
             </div>
 
             <form method="post"
-                  th:action="@{/customer/lookupAccount}">
-
+                  th:action="@{/customer/lookupAndActivateAccount}">
                 <div class="row justify-content-md-center" >
                     <div class="col-md-10">
                         <p class="text-danger"></p>
